[package]
name = "minawan-watch-party"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"


[dependencies]
bevy = "0.14.1"
bevy_web_asset = "0.9.0"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
reqwest = {version = "0.12.7", features = ["json", "blocking"]}
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
twitch-irc = "5.0.1"
vleue_kinetoscope = "0.2.0"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
winit = "0.28.7"

