[package]
name = "minawan-watch-party"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_web_asset = "0.9.0"
env_logger = "0.11.5"
image = "0.25.2"
log = "0.4.22"
rand = "0.8.5"
reqwest = {version = "0.12.7", features = ["json", "blocking"]}
rust-ini = "0.21.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
twitch-irc = "5.0.1"
vleue_kinetoscope = { git = "https://github.com/Gaijutsu/vleue_kinetoscope.git" }
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
winit = "0.28.7"

[patch.crates-io]
# For webp support - https://github.com/image-rs/image/pull/2228
image = { git = "https://github.com/Gaijutsu/image.git" }
# For webp support - https://github.com/image-rs/image-webp/pull/76
image-webp = { git = "https://github.com/image-rs/image-webp" }
